--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,9 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.27'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.27'
 
+    implementation 'com.google.dagger:dagger-android:2.27'
+    implementation 'com.google.dagger:dagger-android-support:2.27' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.27'
+
     testImplementation 'junit:junit:4.12'
 }
